完成橡皮擦功能

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <button onclick="paste();">粘贴</button>
         <button id="move" onclick="move();">移动</button>
         <button onclick="deleteArea();">删除</button>
+        <button id="eraser" onclick="eraser();">橡皮</button>
         <hr />
         <button class="menu" onclick="$('#coordinate').slideToggle();">坐标轴系</button>
         <div id="coordinate" class="slidePanel">
