尝试一下layui.layer弹出层

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="shortcut icon" href="fav.ico" type="image/x-icon">
     <link type="text/css" rel="stylesheet" href="test.css?v=0.0.3" />
     <script src="/js/jquery-3.6.0.js"></script>
+    <script src="/js/layer/layer.js"></script>
     <script>
         /*禁止ios缩放，双击和双指*/
         window.onload = function () {
@@ -68,6 +69,7 @@
         <button id="move" onclick="move();">移动</button>
         <button onclick="deleteArea();">删除</button>
         <button id="eraser" onclick="eraser();">橡皮</button>
+        <button id="test">test</button>
         <hr />
         <button class="menu" onclick="$('#coordinate').slideToggle();">坐标轴系</button>
         <div id="coordinate" class="slidePanel">
